2002-08-19  Morten Welinder  <terra@diku.dk>

	* import-GLPK: Constify a few routines.

2002-08-14  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* import-GLPK: Removed four unnecessary header files.
	
2002-08-13  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* import-GLPK: Use ~s/.../.../g instead of while loops.
	
2002-08-13  Morten Welinder  <terra@diku.dk>

	* import-GLPK: Fix also floor, ceil, and fabs calls.

2002-08-13  Morten Welinder  <terra@diku.dk>

	* import-GLPK: Silence perl warnings.  Add #! line for Emacs'
	sake.  Add gnumeric-config.h as header.  Allow white-space in a
	lot of pattern matches.

2002-08-13  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* import-GLPK: A footprint optimization: cut glpmat1.c and glplp.c
	while importing.

	* import-GLPK: Makefile.am generation improvements.

2002-08-13  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* import-GLPK: Added. Will be used in importing GLPK.

2002-08-12  Jody Goldberg <jody@gnome.org>

	* Release 1.1.7

2002-07-26  Morten Welinder  <terra@diku.dk>

	* import-R: Add dcauchy, pcauchy, phyper, and pnbinom.
	(import_file): gnum_float-handle tan and expm1.

2002-07-25  Morten Welinder  <terra@diku.dk>

	* import-R: Import also dgeom and pgeom.
	(import_file): Optimise "log(1-x)".  (Filed as R bug.)

2002-07-21  Jody Goldberg <jody@gnome.org>

	* Release 1.1.6

2002-07-09  Morten Welinder  <terra@diku.dk>

	* import-R (import_file): Import qpois.c also.

2002-06-21  Morten Welinder  <terra@diku.dk>

	* import-R: Import also dnbinom.c and dhyper.c

2002-06-20  Morten Welinder  <terra@diku.dk>

	* check-config-h.pl (guess_config_file): New function.

2002-06-19  Morten Welinder  <terra@diku.dk>

	* import-R (import_file): Remove some old hacks that are no longer
	needed.

	* import-R: Import also pexp.c and pweibull.c.

2002-05-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.4

2002-04-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.3

2002-03-25  Jody Goldberg <jody@gnome.org>

	* Release 1.1.2
