@@ -1,3 +1,7 @@
+2002-08-20  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
+
+	* import-GLPK: Fixed a replace assingment.
+
 2002-08-19  Morten Welinder  <terra@diku.dk>
 
 	* import-GLPK: Constify a few routines.
